; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/hash/extr_hashfn.c_hash_uint32.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/hash/extr_hashfn.c_hash_uint32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hash_uint32(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i64 2658358872, i64* %5, align 8
  store i64 2658358872, i64* %4, align 8
  store i64 2658358872, i64* %3, align 8
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* %3, align 8
  %8 = add nsw i64 %7, %6
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @final(i64 %9, i64 %10, i64 %11)
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @UInt32GetDatum(i64 %13)
  ret i32 %14
}

declare dso_local i32 @final(i64, i64, i64) #1

declare dso_local i32 @UInt32GetDatum(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
